tweak system navigation bar design

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,15 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
         android:background="@color/surface">
 
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/nav_view"
             android:layout_width="0dp"
-            android:layout_height="@dimen/bottom_nav_height"
+            android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:paddingBottom="@dimen/bottom_nav_padding"
-            android:paddingTop="@dimen/bottom_nav_padding"
-            android:background="@color/secondary_container"
+            android:background="@color/surface_container"
             app:itemActiveIndicatorStyle="@color/surface_container"
             app:itemRippleColor="@color/surface_container_low"
             app:itemTextColor="@color/bottom_nav_text_selector"
@@ -27,9 +24,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/bottom_nav_menu">
 
-
         </com.google.android.material.bottomnavigation.BottomNavigationView>
-
 
         <fragment
             android:id="@+id/nav_host_fragment_activity_main"
