--- a/app/src/main/res/layout/horizontal_recycler_view_item.xml
+++ b/app/src/main/res/layout/horizontal_recycler_view_item.xml
@@ -7,9 +7,9 @@
         android:id="@+id/rvHorizontalAppIcons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clipToPadding="false"
         android:paddingHorizontal="@dimen/default_padding"
         android:orientation="horizontal"
         tools:listitem="@layout/app_item_view"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 </layout>
