--- a/app/src/main/res/layout-land/fragment_iconsetting.xml
+++ b/app/src/main/res/layout-land/fragment_iconsetting.xml
@@ -9,9 +9,6 @@
             type="org.torproject.vpn.ui.iconsetting.model.IconSettingFragmentViewModel" />
 
         <import type="android.view.View" />
-        <variable
-            name="handler"
-            type="org.torproject.vpn.ui.iconsetting.ClickHandler" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -37,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:title="@string/general"
+                app:title="@string/app_icon"
                 android:background="?attr/colorPrimary"
                 app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />
 
@@ -77,27 +74,6 @@
                     android:text="@string/launcher_hint"
                     />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/paragraph_title"
-                    android:paddingHorizontal="@dimen/activity_vertical_margin"
-                    android:paddingTop="@dimen/default_padding"
-                    android:paddingBottom="@dimen/default_padding"
-                    android:text="@string/warnings"/>
-
-                <org.torproject.vpn.ui.base.view.IconTextEntryView
-                    android:id="@+id/warnings_settings_entry"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/compact_padding"
-                    app:hideSwitch="false"
-                    app:hideDrawable="true"
-                    app:secondaryText="@string/new_circuits_warnings_description"
-                    app:text="@string/new_circuits_warnings"
-                    android:clickable="true"
-                    android:focusable="true"
-                    />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
