Tag stats container as not important for acceccessibility. Elements within the container will still be read out loud, but in case the container is empty since the stats are hidden, screen reader will skip the empty container

--- a/app/src/main/res/layout/fragment_connect.xml
+++ b/app/src/main/res/layout/fragment_connect.xml
@@ -99,7 +99,9 @@
             app:layout_constraintBottom_toTopOf="@+id/upper_guideline_action_btns"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar">
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            android:importantForAccessibility="no"
+            >
             <include
                 android:id="@+id/include_stats"
                 layout="@layout/include_connection_stats"
