--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="connectingRainbowEnd">#00DBDE</color>
 
     <color name="primary">#C272FF</color>
-    <color name="on_primary">#18242F</color>
+    <color name="on_primary">#610D85</color>
     <color name="primary_container">#701498</color>
     <color name="on_primary_container">#F5E3FF</color>
     <color name="primary_variant">#A357D3</color>
