--- a/app/src/main/res/drawable/app_item_background_selected.xml
+++ b/app/src/main/res/drawable/app_item_background_selected.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
-
-    >
-    <solid android:color="@color/surface_container_low"/>
-    <corners android:radius="16dp"/>
-    <stroke android:color="@color/secondary"
-        android:width="2dp"
-        />
-    <size android:width="72dp" android:height="72dp"/>
+    android:shape="rectangle">
+    <solid android:color="@color/surface_container_low" />
+    <corners android:radius="8dp" />
+    <stroke
+        android:width="3dp"
+        android:color="@color/tertiary" />
+    <size
+        android:width="72dp"
+        android:height="72dp" />
 
 </shape>
