--- a/app/src/main/res/layout/app_item_view.xml
+++ b/app/src/main/res/layout/app_item_view.xml
@@ -9,8 +9,7 @@
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/compact_padding"
        android:paddingStart="0dp"
-       android:paddingEnd="6dp"
-       >
+       android:paddingEnd="6dp">
 
       <androidx.appcompat.widget.AppCompatImageView
           android:id="@+id/ivAppImageBackground"
@@ -20,20 +19,18 @@
           android:padding="3dp"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-         />
+          app:layout_constraintEnd_toEndOf="parent" />
+
       <androidx.appcompat.widget.AppCompatImageView
           android:id="@+id/ivAppImage"
-          android:layout_width="48dp"
-          android:layout_height="48dp"
+          android:layout_width="66dp"
+          android:layout_height="66dp"
           tools:src="@drawable/ic_dummy_app"
           android:background="@drawable/app_item_background"
           app:layout_constraintTop_toTopOf="@id/ivAppImageBackground"
           app:layout_constraintStart_toStartOf="@id/ivAppImageBackground"
           app:layout_constraintEnd_toEndOf="@id/ivAppImageBackground"
-          app:layout_constraintBottom_toBottomOf="@id/ivAppImageBackground"
-
-          />
+          app:layout_constraintBottom_toBottomOf="@id/ivAppImageBackground" />
 
       <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/tvAppTitle"
