--- a/app/src/main/res/layout/fragment_iconsetting.xml
+++ b/app/src/main/res/layout/fragment_iconsetting.xml
@@ -22,29 +22,17 @@
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:liftOnScroll="false"
             app:elevation="0dp"
             android:theme="@style/Theme.TorVPN.AppBarOverlay">
-
-            <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:id="@+id/toolbar_layout"
-                style="@style/collapsing_toolbar_style"
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                app:navigationIcon="?attr/homeAsUpIndicator"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
                 app:title="@string/app_icon"
-                app:toolbarId="@+id/toolbar">
-
-                <com.google.android.material.appbar.MaterialToolbar
-                    android:id="@+id/toolbar"
-                    app:navigationIcon="?attr/homeAsUpIndicator"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:layout_collapseMode="pin"
-                    app:title="@string/connection"
-                    android:background="@color/surface"
-                    app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />
-
-            </com.google.android.material.appbar.CollapsingToolbarLayout>
+                android:background="@color/surface"
+                app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
@@ -58,26 +46,18 @@
                 android:paddingBottom="@dimen/activity_horizontal_margin"
                 android:weightSum="1"
                 android:orientation="vertical">
+
                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/paragraph_title"
-                    android:paddingHorizontal="@dimen/activity_vertical_margin"
-                    android:paddingTop="@dimen/default_padding"
-                    android:paddingBottom="@dimen/default_padding"
-                    android:layout_marginBottom="12dp"
-                    android:text="@string/appearance"/>
+                    android:paddingBottom="@dimen/compact_padding"
+                    android:paddingHorizontal="@dimen/default_padding"
+                    style="@style/text_body_small"
+                    android:text="@string/launcher_hint" />
 
                 <include android:id="@+id/layout_app_icons"
                     layout="@layout/horizontal_recycler_view_item" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="@dimen/default_padding"
-                    android:paddingHorizontal="@dimen/activity_vertical_margin"
-                    style="@style/text_body_small"
-                    android:text="@string/launcher_hint" />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
