feat: add option to donate from About screen

--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="connection_button_lower_guideline">86dp</dimen>
     <dimen name="connection_status_bar_horizontal_padding">8dp</dimen>
     <dimen name="connection_status_bar_vertical_padding">8dp</dimen>
+    <dimen name="support_image_height">300dp</dimen>
 </resources>
