--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -2,13 +2,20 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
+
         <variable
             name="viewModel"
             type="org.torproject.vpn.ui.about.model.AboutFragmentViewModel" />
 
         <import type="android.view.View" />
+
+        <variable
+            name="handler"
+            type="org.torproject.vpn.ui.about.ClickHandler" />
     </data>
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,8 +28,8 @@
             android:layout_height="wrap_content"
             app:liftOnScroll="false"
             app:elevation="0dp"
-            android:background="?attr/colorPrimary"
-            >
+            android:background="?attr/colorPrimary">
+
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 app:navigationIcon="?attr/homeAsUpIndicator"
@@ -30,21 +37,23 @@
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />
         </com.google.android.material.appbar.AppBarLayout>
+
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:background="@color/surface"
-            >
+            tools:background="@color/surface">
+
             <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbars="none"
-                >
+                android:scrollbars="none">
+
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
@@ -52,8 +61,8 @@
                         android:scaleType="fitXY"
                         android:layout_gravity="center"
                         android:layout_marginTop="@dimen/default_padding"
-                        tools:src="@drawable/ic_connect"
-                        />
+                        tools:src="@drawable/ic_connect" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -63,8 +72,7 @@
                         android:paddingBottom="48dp"
                         tools:text="Firefox"
                         android:text="@{viewModel.appName}"
-                        android:textAppearance="@style/label_text_in_fragment"
-                        />
+                        android:textAppearance="@style/label_text_in_fragment" />
 
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:id="@+id/ll_info_container"
@@ -83,6 +91,7 @@
                             android:weightSum="2"
                             android:paddingHorizontal="@dimen/activity_horizontal_margin"
                             android:background="@drawable/bg_rounded_left">
+
                             <TextView
                                 style="@style/title_in_stats"
                                 android:id="@+id/title_version"
@@ -90,8 +99,7 @@
                                 android:layout_height="0dp"
                                 android:layout_weight="1"
                                 android:text="@string/version"
-                                android:gravity="bottom"
-                                />
+                                android:gravity="bottom" />
 
                             <TextView
                                 style="@style/number_in_stats"
@@ -107,8 +115,7 @@
                         <View
                             android:layout_height="96dp"
                             android:layout_width="1dp"
-                            android:background="@color/outline"
-                            />
+                            android:background="@color/outline" />
 
                         <LinearLayout
                             android:layout_width="0dp"
@@ -118,8 +125,8 @@
                             android:orientation="vertical"
                             android:background="@drawable/bg_rounded_right"
                             android:weightSum="2"
-                            android:paddingHorizontal="@dimen/activity_horizontal_margin"
-                            >
+                            android:paddingHorizontal="@dimen/activity_horizontal_margin">
+
                             <TextView
                                 style="@style/title_in_stats"
                                 android:id="@+id/tv_title_update"
@@ -147,8 +154,85 @@
                         style="@style/text_body_large"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:src="@string/about_description_long"
-                        />
+                        android:text="@string/about_description_long" />
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                        android:layout_marginBottom="@dimen/activity_vertical_margin"
+                        app:cardBackgroundColor="@color/surface_container_low"
+                        app:cardCornerRadius="12dp">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <androidx.cardview.widget.CardView
+                                android:id="@+id/cv_support_img"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:cardCornerRadius="12dp"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent">
+
+                                <androidx.appcompat.widget.AppCompatImageView
+                                    android:id="@+id/iv_support"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="@dimen/support_image_height"
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/about_support_image" />
+                            </androidx.cardview.widget.CardView>
+
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/tv_support_title"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingTop="@dimen/activity_vertical_margin"
+                                android:paddingHorizontal="@dimen/default_padding"
+                                style="@style/title_medium"
+                                android:textColor="@color/white"
+                                android:text="@string/about_support_title"
+                                app:layout_constraintTop_toBottomOf="@id/cv_support_img"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent" />
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                android:id="@+id/tv_support_description"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingHorizontal="@dimen/default_padding"
+                                android:paddingVertical="@dimen/compact_padding"
+                                style="@style/text_body_large"
+                                android:text="@string/about_support_description"
+                                app:layout_constraintTop_toBottomOf="@id/tv_support_title"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent" />
+
+                            <com.google.android.material.button.MaterialButton
+                                android:id="@+id/tv_action_btn"
+                                style="@style/Widget.Material3.Button"
+                                android:layout_width="0dp"
+                                android:layout_height="52dp"
+                                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                                android:layout_marginTop="@dimen/compact_padding"
+                                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                                android:backgroundTint="@color/primary"
+                                android:gravity="center"
+                                android:onClick="@{handler::onDonateClicked}"
+                                android:text="@string/about_support_action"
+                                android:textAppearance="@style/button_text"
+                                android:textColor="@color/on_primary"
+                                app:cornerRadius="26dp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@id/tv_support_description"
+                                app:rippleColor="@color/primary_container" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                    </androidx.cardview.widget.CardView>
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.core.widget.NestedScrollView>
