--- a/app/src/main/res/layout-land/fragment_bridgebot.xml
+++ b/app/src/main/res/layout-land/fragment_bridgebot.xml
@@ -163,38 +163,39 @@
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </ScrollView>
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/tv_action_use_bridges"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/sv_bridgeLines"
                 android:layout_gravity="end"
-                style="@style/button_text"
+                style="@style/Widget.Material3.Button"
                 android:text="@string/use_bridges"
                 android:textColor="@color/inverse_on_surface"
                 android:clickable="true"
                 android:focusable="true"
-                android:background="@drawable/bg_primary_round_btn"
+                android:backgroundTint="@color/primary"
                 android:onClick="@{handler::onSaveBridgesClicked}"
                 android:paddingHorizontal="@dimen/default_padding"
-                android:paddingVertical="16dp" />
+                android:paddingVertical="16dp"
+                app:rippleColor="@color/primary_container"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/sv_bridgeLines"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/tv_action_btn"
+            style="@style/Widget.Material3.Button"
             android:layout_width="0dp"
             android:layout_height="52dp"
-            style="@style/button_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:background="@{viewModel.bridgeButtonBackgroundColor}"
+            android:backgroundColor="@{viewModel.bridgeButtonBackgroundColor}"
             android:gravity="center"
             android:clickable="true"
             android:focusable="true"
@@ -202,7 +203,8 @@
             android:textColor="@{viewModel.bridgeButtonTextColor}"
             android:text="@{viewModel.bridgeButtonText}"
             android:onClick="@{handler::onBridgeButtonClicked}"
-            android:enabled="@{!viewModel.isFetching}" />
+            android:enabled="@{!viewModel.isFetching}"
+            app:rippleColor="@color/primary_container" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
