--- a/app/src/main/assets/help/layout.css
+++ b/app/src/main/assets/help/layout.css
@@ -1,11 +1,30 @@
 body {
   background-color: #160F43;
   color: #FFFFFF;
-  padding-right: 24px;
-  padding-left: 24px;
+  padding-right: 16px;
+  padding-left: 16px;
+  line-height: 1.4;
 }
 
 a {
-  color: #85BBF8;
+  color: #CA85FF;
+  font-weight: 500;
 }
 
+
+h1 {
+    font-weight: 500;
+    line-height: 28px;
+}
+
+code {
+    background: #2E3781;
+    border-radius: 4px;
+    border: 2px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 4px;
+    padding-right: 4px;
+    color: #FFFFFF;
+    word-break: break-all;
+}
