--- a/app/src/main/res/layout-land/fragment_connect.xml
+++ b/app/src/main/res/layout-land/fragment_connect.xml
@@ -155,10 +155,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:background="@drawable/round_exit_bg"
+                android:background="@drawable/round_exit_bg_interactive"
                 android:onClick="@{() -> viewModel.exitNodeSelectionButtonClicked()}"
                 android:padding="29dp"
                 android:contentDescription="@string/exit_location"
+                android:clickable="true"
+                android:focusable="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tv_connect_action_btn"
                 app:layout_constraintHorizontal_chainStyle="packed"
