fix: text button interaction states

--- a/app/src/main/res/layout-land/include_error_frame.xml
+++ b/app/src/main/res/layout-land/include_error_frame.xml
@@ -62,9 +62,10 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_error_title" />
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/tv_btn_action"
-                style="@style/error_action_text"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:textColor="@color/secondary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
