add open-source licenses and privacy policy screens

--- a/app/src/main/assets/help/layout.css
+++ b/app/src/main/assets/help/layout.css
@@ -3,18 +3,50 @@ body {
   color: #FFFFFF;
   padding-right: 16px;
   padding-left: 16px;
-  line-height: 1.4;
+  letter-spacing: 0.25px;
+  font-weight: 400;
+  font-size: 14px;
+  font-family: 'InterVariable';
+  line-height: 1.3em;
+}
+
+ul {
+   padding-left: 20px;
+}
+
+strong {
+    font-weight: 500;
 }
 
 a {
   color: #CA85FF;
-  font-weight: 500;
 }
 
-
 h1 {
+    margin-top: 10px;
+    margin-bottom: 0px;
+    font-weight: 400;
+    letter-spacing: 0px;
+    font-size: 24px;
+    line-height: 1.3em;
+}
+
+h2 {
+    margin-top: 10px;
+    margin-bottom: 0px;
     font-weight: 500;
-    line-height: 28px;
+    letter-spacing: 0px;
+    font-size: 22px;
+    line-height: 1.3em;
+}
+
+h3 {
+    margin-top: 6px;
+    margin-bottom: 0px;
+    font-weight: 500;
+    letter-spacing: 0.15px;
+    font-size: 16px;
+    line-height: 1.3em;
 }
 
 code {
@@ -27,4 +59,10 @@ code {
     padding-right: 4px;
     color: #FFFFFF;
     word-break: break-all;
+    line-height: 1.3em;
+}
+
+@font-face {
+    font-family: 'InterVariable';
+    src: url("file:///android_asset/help/inter_variable.ttf");
 }
