--- a/app/src/main/res/layout/app_routing_table_header.xml
+++ b/app/src/main/res/layout/app_routing_table_header.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingHorizontal="@dimen/default_padding"
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <com.google.android.material.materialswitch.MaterialSwitch
