--- a/app/src/main/res/layout/app_show_apps_view.xml
+++ b/app/src/main/res/layout/app_show_apps_view.xml
@@ -5,7 +5,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="@dimen/default_padding">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvTitle"
