--- a/app/src/main/res/layout/app_switch_item_view.xml
+++ b/app/src/main/res/layout/app_switch_item_view.xml
@@ -6,7 +6,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:paddingVertical="@dimen/compact_padding"
-        >
+        android:paddingHorizontal="@dimen/default_padding"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="@drawable/bg_config_item">
+
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivAppImage"
             android:layout_width="36dp"
